<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">田洋生产</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

     <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    
    <!-- 登陆界面 -->

    <string name="appTitle">欢迎登录田洋管理生产管理平台</string>
    <string name="tv_main_title">生产管理系统</string>
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="tv_strict">区域</string>
    <string name="tv_authcode">验证码</string>
    <string name="tv_authcode_error">验证码错误</string>
    <string name="tv_authcode_correct">验证码正确</string>
    <string name="tv_login">登录</string>
    <string name="tv_commit">提交</string>
    <string name="tv_cancel">取消</string>

    <!-- 主界面 -->
    <string name="tv_promanage">生产管理</string>
    <string name="tv_proplan">生产计划</string>
    <string name="tv_probaseinfo">基础信息</string>
    <!-- 生产管理界面 -->
    <string name="tv_tianyangbozhongyizai">田洋播种移栽</string>
    <string name="tv_tianyangnoshixiangmu">田阳农事项目</string>
    <string name="tv_tianyangshoucheng">田洋收成</string>
    <string name="tv_zuowujiaoshou">作物交售</string>
    <string name="tv_shengchanlvlitongji">生产率履历统计</string>

    <!-- 生产管理界面 二级列表 -->
    <string name="tv_bozhongyizaidengji">播种移栽登记</string>
    <string name="tv_bozhongyizaiguanli">播种移栽管理</string>
    <string name="tv_tianyangnongshidengji">田洋农事登记</string>
    <string name="tv_tianyangnongshiguanli">田洋农事管理</string>
    <string name="tv_shouchengdengji">收成登记</string>
    <string name="tv_shouchengguanli">收成登记管理</string>
    <string name="tv_tianjiashouhuoxinxi">添加收货信息</string>
    <string name="tv_tianjiashouhuoguanli">添加收货信息管理</string>
    <string name="tv_shengchanlvlitongji_list">生产率履历统计</string>

    <!-- 生产管理界面 二级列表  内容 -->
    <string name="tv_servicename">服务站名称:</string>
    <string name="tv_seeddate">播种日期:</string>
    <string name="tv_agricuturalname">农作物名称:</string>
    <string name="tv_recoder">记录人:</string>
    <string name="tv_manager">管理员:</string>
    <string name="tv_mover">实施人员:</string>
    <string name="tv_operatetianyang">操作田洋:</string>
    <string name="tv_remark">备注:</string>
    <string name="tv_servicenumber">服务站编号:</string>
    <string name="tv_transplantname">移栽日期:</string>
    <string name="tv_agricuturalvariety">农作物品种:</string>
    <string name="tv_recorddate">登记日期:</string>
    <string name="tv_save">保存</string>
    <string name="tv_query">查询</string>
    <string name="tv_addtianyangmanage">添加田洋农事</string>
    <string name="tv_add">添加</string>
    <string name="tv_confirm">确认</string>
    <string name="tv_last">上一条</string>
    <string name="tv_next">下一条</string>
    <!-- 生产计划界面   内容 -->
    <string name="tv_jihuamigncheng">计划名称:</string>
    <string name="tv_nongchanpinmingcheng">农产品名称:</string>
    <string name="tv_jiagognliang">加工量(斤):</string>
    <string name="tv_zhidingren">制定人:</string>
    <string name="tv_yujikaishishijian">预计开始时间:</string>
    <string name="tv_yujijieshushijian">预计结束时间:</string>
    <string name="tv_zhidingshijian">制定时间:</string>
    <string name="tv_jihualeixing">计划类型:</string>

    <!-- 生产计划统计分析界面   内容 -->
    <string name="tv_jiagognfei">加工费(元/斤):</string>
    <string name="tv_rengognfei">人工费(元/斤):</string>
    <string name="tv_baozhuangfei">包装费(元/斤):</string>
    <string name="tv_duantuyunshufei">短途运输费:</string>
    <string name="tv_changtuyunshufei">长途运输费(元/斤):</string>
    <string name="tv_baochaungjianshu">包装件数(件/斤):</string>
    <string name="tv_baozhuangyewufei">包装业务费(元/斤):</string>
    <string name="tv_yulengfei">预冷费(元/斤):</string>
    <string name="tv_hour">小计(元):</string>

    <!-- 基础信息界面   内容 -->
    <string name="tv_service">服务站:</string>
    <string name="tv_servicemanage">服务站管理</string>
    <string name="tv_tianyangmanage">田洋管理</string>
    <string name="tv_suoshuquyu">所属区域:</string>
    <string name="tv_address">地址:</string>
    <string name="tv_bianhao">编号:</string>
    <string name="tv_zhanzhang">站长:</string>
    <string name="tv_zhongzhimianji">种植面积(亩):</string>
    <string name="tv_shengzhangpinzhong">生长品种:</string>
    <string name="tv_suoshujipeizhongxin">所属集配中心:</string>
    <string name="tv_lianxidianhua">联系电话:</string>
    <string name="tv_shengchanpinzhong">生产品种:</string>
    <string name="tv_postalcode">邮政编码:</string>
    <string name="tv_turangqingkuang">土壤情况:</string>
    <string name="tv_zhongzhinonghushuliang">种植农户数量(户):</string>
    <string name="tv_suoshufuwuzhan">所属服务站:</string>
    <string name="tv_tiandibianhao">田地编号:</string>
    <string name="tv_nonghuminghcheng">农户名称:</string>
    <string name="tv_tiandimianji">田地面积(亩):</string>
    <string name="tv_turangxinxi">土壤信息:</string>
    <string name="my_collect">我的收藏</string>

    <string name="please_wait">请稍后...</string>
    
</resources>